--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -11,7 +11,7 @@
         <li class="nav-item"><a href= {% url "index" %} class="nav-link">Главная</a></li>
         <li class="nav-item"><a href={% url "all_recipes" %} class="nav-link">Рецепты</a></li>
         {% if user.is_authenticated %}
-        <li class="nav-item"><a href="#" class="nav-link">Мои рецепты</a></li>
+        <li class="nav-item"><a href={% url "my_recipe" %} class="nav-link">Мои рецепты</a></li>
         <div class="btn-group" role="group" aria-label="Basic outlined example">
             <button type="button" class="btn btn-outline-primary">
                 <a class="text-decoration-none text-reset" href={% url "profile" %}>{{ user.username }}</a>
